--- a/Crypto Notepad/Properties/Resources.resx
+++ b/Crypto Notepad/Properties/Resources.resx
@@ -661,19 +661,19 @@
   </data>
   <data name="lock_pencil" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAACZUlEQVQ4T6WQXUiTYRTHz3lf
-        ELwKBiUsK+w68yLCoBuXIeiCQBA/ohWpy0l2ITQ/UlkY+ZGps4WlLsUmbLPUaQua5nSR5ijTRMUioyi1
-        Ii9CWJRxes6rk5IVRAd+PIfzP//znOcBIvovIHonQkWGBH2Fa9wrlmHQJO/zmuR8QdU6+VxjLdjHHvZu
-        FIK4i+T9vpodzZ+elr2ZdOd+ZDjnGmub+8GZL22mePFxyUJv9YHpymNoZjjnGmu/9vYfFAN6jPIGVoPE
-        NC6MXfxhyQ67X3sCgeGca6xxT9c5GSYjJRhD8YShC7KCV+AqkKH+JN566TGSJQt7m3L4f8QAkb8aKCTW
-        lJvLZHgrzJsHGDylct2ldLA/cWbTdT3eaTGgozwV/Jy7zVpirccoNYsBeaEGXKYPHfTtdQutzFpoebyG
-        lkbLafaujuY9Olry6eiLX0ffZ06R73iYYx6xewQx7rcBfqeexm/n0POeMzTlOksTXbnktaaQry2F/B0p
-        NNUpTkc6NRyNGiWTiVyIw/+0wbvhRHI1p1EgEKAEtbq2FSAB+ktlBfH+6r9t8MimIY9VTYGFIkqPjxhR
-        qVR7W0BEq14KUvGnDabdiTRki1TM3RY11WdJ9uTYcLgRIz4xaitCiVbhSqgNBq0acjet3WyriqAx+2E6
-        n4R1JUmoeJVQb0HIjMU2+uyg1UUbfeUtZiz0/mEBPWjfpZg7zdtpzqOl1Rd64l72BEMl2KOJgvaMGOjL
-        ioWbxgS8WpmK1xoMOEErc1SZh8un4+FZWjQMMId2QyN71r0QLtgmUIeAMrXYlxyHR0JowgPhPwGrrd1/
-        oRCVyQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAJlSURBVDhPpZBdSJNhFMfPeV8QvAoGJSwr7DrzIsKg
+        G5ch6IJAED+iFanLSXYhND9SWRj5kamzhaUuxSZss9RpC5rmdJHmKNNExSKjKLUiL0JYlHF6zquTkhVE
+        B348h/M///Oc5wEi+i8geidCRYYEfYVr3CuWYdAk7/Oa5HxB1Tr5XGMt2Mce9m4UgriL5P2+mh3Nn56W
+        vZl0535kOOcaa5v7wZkvbaZ48XHJQm/1genKY2hmOOcaa7/29h8UA3qM8gZWg8Q0Loxd/GHJDrtfewKB
+        4ZxrrHFP1zkZJiMlGEPxhKELsoJX4CqQof4k3nrpMZIlC3ubcvh/xACRvxooJNaUm8tkeCvMmwcYPKVy
+        3aV0sD9xZtN1Pd5pMaCjPBX8nLvNWmKtxyg1iwF5oQZcpg8d9O11C63MWmh5vIaWRstp9q6O5j06WvLp
+        6ItfR99nTpHveJhjHrF7BDHutwF+p57Gb+fQ854zNOU6SxNdueS1ppCvLYX8HSk01SlORzo1HI0aJZOJ
+        XIjD/7TBu+FEcjWnUSAQoAS1urYVIAH6S2UF8f7qv23wyKYhj1VNgYUiSo+PGFGpVHtbQESrXgpS8acN
+        pt2JNGSLVMzdFjXVZ0n25NhwuBEjPjFqK0KJVuFKqA0GrRpyN63dbKuKoDH7YTqfhHUlSah4lVBvQciM
+        xTb67KDVRRt95S1mLPT+YQE9aN+lmDvN22nOo6XVF3riXvYEQyXYo4mC9owY6MuKhZvGBLxamYrXGgw4
+        QStzVJmHy6fj4VlaNAwwh3ZDI3vWvRAu2CZQh4AytdiXHIdHQmjCA+E/Aaut3X+hEJXJAAAAAElFTkSu
+        QmCC
 </value>
   </data>
   <data name="arrow_left" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -1090,20 +1090,19 @@
   </data>
   <data name="old_lock_edit" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAACmUlEQVQ4T42SW0iTcRjGhwUi
-        ojY1T0EX3XRVBFLQRVKRFuRFXUR0V1CpJM4kNQ8rT9UOLnXO5WEuswsFS4ypDVOnoiaah2XmSrswJ5U3
-        3jiFIn79v29jGRb0wMP38rzv+/v+30GxVRZrs9lifYLF2uSzVDebfe1tAnyVUM2j+pU+xyDLbjefl1f4
-        8vWbuLqRMqnnG/tDfkCl0WS223uYnHbyuOkphgqjbKmWMqknzXinf8sP0Oof0ts/QE2thYysHJOI4iVn
-        ZmVXm0XW2+9AZ6jccl6v/IA7pXrsvUPoK+ukJMabyopRl+hEbxBDlenfAFWBAVvfBGqddduQKr+czr5x
-        SvVewAfdMLM6h1zLgHnD3rcuXSSuB2HMa5S800Qzq40TjmVOG41LE86CNoQlfSCF9/Us2dyMmieYUreL
-        fQGY0uyBtVZY7xB+AR4bbHZ6vSHqDZFvtpFdXI17dY2Sci3d+T2Mp9V6AWMlsWwuljFjUOCs2Ml7UyBd
-        BTvoKgzAVRPIrDGA0dxDrC3YuKupxi4+a0ZhrvQI8TJguCgWz4yK7/0J/Bw6xWKDknOHFbI/NYYyUpgA
-        Y2egbR/zHWXczCuSl/3vYEAdhWfyKjOVQcyaQsVSJGmnFaQkKnhTfBzGk+HZQWiMwXrjiH9Zkgx4lbcb
-        z+uL/HCcFCdI4mO9krzzCqaLj4ll6c4HoCGOmtQEBtXhEsAvGdCdE4lnKBmnMVg+gas2hPWXl2C1GuZK
-        oC4K4zUBm7+M/XbEdoAtO4KNvhMwkgijSSzUB2O5l0p3a6kAVGG+flS8A9EfO4vt1l9O0JIe7mzPVPJc
-        paRdtQvbzWBy069QmpKMq+qCyIJozwwTVtKSrnT6dmXJAKH9wvK//x+WZv0CFL8AglrvSOxt69sAAAAA
-        SUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAKZSURBVDhPjZJbSJNxGMaHBSKiNjVPQRfddFUEUtBF
+        UpEW5EVdRHRXUKkkziQ1DytP1Q4udc7lYS6zCwVLjKkNU6eiJpqHZeZKuzAnlTfeOIUifv2/b2MZFvTA
+        w/fyvO/7+/7fQbFVFmuz2WJ9gsXa5LNUN5t97W0CfJVQzaP6lT7HIMtuN5+XV/jy9Zu4upEyqecb+0N+
+        QKXRZLbbe5icdvK46SmGCqNsqZYyqSfNeKd/yw/Q6h/S2z9ATa2FjKwck4jiJWdmZVebRdbb70BnqNxy
+        Xq/8gDuleuy9Q+gr66QkxpvKilGX6ERvEEOV6d8AVYEBW98Eap1125Aqv5zOvnFK9V7AB90wszqHXMuA
+        ecPety5dJK4HYcxrlLzTRDOrjROOZU4bjUsTzoI2hCV9IIX39SzZ3IyaJ5hSt4t9AZjS7IG1VljvEH4B
+        Hhtsdnq9IeoNkW+2kV1cjXt1jZJyLd35PYyn1XoBYyWxbC6WMWNQ4KzYyXtTIF0FO+gqDMBVE8isMYDR
+        3EOsLdi4q6nGLj5rRmGu9AjxMmC4KBbPjIrv/Qn8HDrFYoOSc4cVsj81hjJSmABjZ6BtH/MdZdzMK5KX
+        /e9gQB2FZ/IqM5VBzJpCxVIkaacVpCQqeFN8HMaT4dlBaIzBeuOIf1mSDHiVtxvP64v8cJwUJ0jiY72S
+        vPMKpouPiWXpzgegIY6a1AQG1eESwC8Z0J0TiWcoGacxWD6BqzaE9ZeXYLUa5kqgLgrjNQGbv4z9dsR2
+        gC07go2+EzCSCKNJLNQHY7mXSndrqQBUYb5+VLwD0R87i+3WX07Qkh7ubM9U8lylpF21C9vNYHLTr1Ca
+        koyr6oLIgmjPDBNW0pKudPp2ZckAof3C8r//H5Zm/QIUvwCCWu9I7G3r2wAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="gear" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -1123,5 +1122,8 @@
   </data>
   <data name="application" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\application.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="clipboard_text" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\clipboard-text.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
